--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,6 @@ bind r source ~/.tmux.conf\; display "~/.tmux.conf sourced!"
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+set -sg escape-time 0
+
