switch tmux to ctrl-a

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,3 +10,8 @@ bind % split-window -h -c "#{pane_current_path}"
 
 set -sg escape-time 0
 
+set -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+
+
