Add fugitive and fix tmux start

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 set -g default-terminal "screen-256color"
 
-set-option -g default-command "reattach-to-user-namespace -l fish"
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 setw -g mode-keys vi
 
 bind r source ~/.tmux.conf\; display "~/.tmux.conf sourced!"
