--- a/tmux.conf
+++ b/tmux.conf
@@ -14,4 +14,13 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+unbind-key j
+bind-key j select-pane -D # Similar to 'C-w j' to navigate windows in Vim
+unbind-key k
+bind-key k select-pane -U
+unbind-key h
+bind-key h select-pane -L
+unbind-key l
+bind-key l select-pane -R
 
+bind-key b clear-history
